<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">InventoryApp</string>

    <!-- Label for overflow menu option that inserts fake item data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all item data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Items</string>

    <!-- Title for the activity to add a new item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_item">Add an Item</string>

    <!-- Title for the activity to edit an item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_item">Edit Item</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current item [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for selling information in the editor [CHAR LIMIT=30] -->
    <string name="category_sold">Is it sold?</string>

    <!-- Label for adding information in the editor [CHAR LIMIT=30] -->
    <string name="category_add">More stock?</string>

    <!-- Label for ordering information in the editor [CHAR LIMIT=30] -->
    <string name="category_order">Order now?</string>

    <!-- Label for price information in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price per unit</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_name">Name</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_quantity">Quantity</string>

    <!-- Default quantity if the quantity is unknown [CHAR LIMIT=20] -->
    <string name="unknown_quantity">1</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_price">Price</string>

    <!-- Units for price of the item (euros) [CHAR LIMIT=5] -->
    <string name="unit_item_price">€</string>

    <!-- Label for button menu option if one item is sold [CHAR LIMIT=20] -->
    <string name="one_item_sold">1 Sold</string>

    <!-- Label for button menu option if all items are sold [CHAR LIMIT=20] -->
    <string name="sold_out">Sold Out</string>

    <!-- Label for button menu option if one item is sold [CHAR LIMIT=20] -->
    <string name="add_one_item">Add 1</string>

    <!-- Label for button menu option if all items are sold [CHAR LIMIT=20] -->
    <string name="add_ten_items">Add 10</string>

    <!-- Toast message in editor when there is no inventory to decrease the stock [CHAR LIMIT=NONE] -->
    <string name="no_inventory">You can\'t sell an item you do not have</string>

    <!-- Toast message in editor when there is no inventory to decrease the stock [CHAR LIMIT=NONE] -->
    <string name="success_item_sold">Quantity updated</string>

    <!-- Toast message in editor when new item has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_successful">Item saved</string>

    <!-- Toast message in editor when new item has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_failed">Error with saving item</string>

    <!-- Toast message in editor when current item was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_successful">Item updated</string>

    <!-- Toast message in editor when current pet has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_failed">Error with updating item</string>

    <!-- Toast message in editor when current pet has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_image_failed">Error with adding the image</string>

    <!-- Title text for the empty view, which describes the sad smiley image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">No item has been entered yet&#8230;</string>

    <!-- Subtitle text for the empty view that prompts the user to add an item [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding an item</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_successful">Item deleted</string>

    <!-- Toast message in editor when current item has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_failed">Error with deleting item</string>

    <!-- Dialog message to ask the user to confirm deleting the current item [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Dialog button text for the option to confirm deleting the current item [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current item [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Email subject for the order [CHAR LIMIT=50] -->
    <string name="order_summary_email_subject">InventoryApp Order %1$s</string>

    <!-- Email subject for the content of the email [CHAR LIMIT=NONE] -->
    <string name="order_summary_email_text">Current quantity %1$s</string>

</resources>
