<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/name"
        style="@style/ItemName" />

    <TextView
        android:id="@+id/quantity_name"
        style="@style/ItemDescription"
        android:layout_alignParentStart="true"
        android:layout_below="@id/name"
        android:layout_marginEnd="@dimen/text_margin"
        android:text="@string/hint_item_quantity" />

    <TextView
        android:id="@+id/quantity"
        style="@style/ItemDescription"
        android:layout_below="@id/name"
        android:layout_toEndOf="@id/quantity_name" />

    <TextView
        android:id="@+id/price"
        style="@style/ItemDescription"
        android:layout_alignParentStart="true"
        android:layout_below="@id/quantity_name" />

    <TextView
        android:id="@+id/price_symbol"
        style="@style/ItemDescription"
        android:layout_below="@id/quantity_name"
        android:layout_toEndOf="@id/price"
        android:text="@string/unit_item_price" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_item_sold"
        android:layout_below="@id/price"
        android:layout_alignParentStart="true"/>

</RelativeLayout>